# binspector

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  _clang-format  binspector.sublime-project  boost-build.jam  build.sh  configure.sh  format.sh  jamroot.jam  smoke_test.sh  update_boost.sh
app/: jamfile.jam  main.cpp
bfft/: bmp.bfft  dng.bfft  jpg.bfft  png.bfft  string.bfft  tiff.bfft  utf8.bfft
binspector/: analyzer.hpp  ast.hpp  bitreader.hpp  common.hpp  constant_names.hpp  dot.hpp  endian.hpp  error.hpp  forest.hpp  fuzz_generators.hpp  fuzzer.hpp  genfuzz.hpp  html_dump.hpp  interface.hpp  ostream.hpp  parser.hpp  string.hpp
linenoise/: linenoise.c  linenoise.h
source/: analyzer.cpp  ast.cpp  bitreader.cpp  common.cpp  dot.cpp  fuzz_generators.cpp  fuzzer.cpp  genfuzz.cpp  html_dump.cpp  interface.cpp  main.cpp  parser.cpp
test/: issue1.bfft  issue11.bfft  issue19.bfft
xcode/: binspector.xcconfig
xcode/binspector.xcodeproj/: project.pbxproj
